export variables from file incl. test

--- a/test/src/utils/.env.dummy
+++ b/test/src/utils/.env.dummy
@@ -3,4 +3,4 @@ someVariable=someValue
 
 # More comment here
 # Multiline also
-ANOTHER_VARIABLE=uppercase
+ANOTHER_VARIABLE="VARIABLE VALUE WITH SPACES UPPERCASE"
